--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_animated_splash: ^0.0.10
+  flutter_bloc: ^9.0.0
   flutter_localizations:
     sdk: flutter
   flutter_screenutil: ^5.9.3
