--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cached_network_image: null
+  carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   dio: ^5.7.0
@@ -45,16 +46,20 @@ dependencies:
   get_it: null
   go_router: null
   google_fonts: null
-  hive_flutter: ^1.1.0
+  hive: null
+  hive_flutter: null
+  path_provider: null
+  scroll_snap_list: ^0.9.1
   shimmer: null
   smooth_page_indicator: null
   url_launcher: null
-  path_provider: null
 
 dev_dependencies:
+  build_runner: null
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
+  hive_generator: null
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
